<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/toolbar"
        android:background="?attr/colorSurface"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:id="@+id/ToolbarLinear"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/linear4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <ImageView
                    android:id="@+id/HeaderButton1"
                    android:padding="2dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/icon_arrow_back_round"
                    android:scaleType="fitCenter"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/linearSpace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="?attr/colorOnSurface"
                    android:id="@+id/Header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_project"/>
                <TextView
                    android:textSize="14sp"
                    android:textColor="?attr/colorOnSurface"
                    android:id="@+id/HeaderSubtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HeaderSubtext"/>
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:id="@+id/linearTBButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <ImageView
                    android:id="@+id/HeaderButton2"
                    android:padding="2dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:src="@drawable/icon_refresh_round"
                    android:scaleType="fitCenter"/>
                <ImageView
                    android:id="@+id/imptB"
                    android:padding="4dp"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/icon_file_open_round"
                    android:scaleType="fitCenter"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/hr"
            android:background="?attr/colorOnSecondaryContainer"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linear1"
        android:background="?attr/colorSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:id="@+id/vscroll1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/linear2"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                    <EditText
                        android:textSize="14sp"
                        android:textColor="?attr/colorOnSurface"
                        android:textColorHint="#bdbdbd"
                        android:gravity="center_vertical"
                        android:id="@+id/edittextID"
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/id"
                        android:singleLine="true"
                        android:imeOptions="actionNext"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                    <EditText
                        android:textSize="14sp"
                        android:textColor="?attr/colorOnSurface"
                        android:textColorHint="#bdbdbd"
                        android:gravity="center_vertical"
                        android:id="@+id/edittextNAME"
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/enter_name"
                        android:singleLine="true"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionNext"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                    <EditText
                        android:textSize="14sp"
                        android:textColor="?attr/colorOnSurface"
                        android:textColorHint="#bdbdbd"
                        android:gravity="center_vertical"
                        android:id="@+id/edittextAUTHOR"
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/enter_author"
                        android:singleLine="true"
                        android:inputType="textCapSentences"
                        android:imeOptions="actionNext"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinputlayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                    <EditText
                        android:textSize="14sp"
                        android:textColor="?attr/colorOnSurface"
                        android:textColorHint="#bdbdbd"
                        android:gravity="center_vertical"
                        android:id="@+id/edittextDESC"
                        android:padding="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_description"
                        android:inputType="textMultiLine"
                        android:imeOptions="actionDone"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/hr2"
            android:background="?attr/colorOnSecondaryContainer"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/linear3"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">
            <com.google.android.material.button.MaterialButton
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:gravity="center"
                android:id="@+id/buttonCancel"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/cancel"
                android:layout_weight="1"
                app:backgroundTint="?attr/colorPrimaryContainer"
                app:cornerRadius="100dp"/>
            <com.google.android.material.button.MaterialButton
                android:textSize="14sp"
                android:textColor="?attr/colorOnPrimary"
                android:gravity="center"
                android:id="@+id/buttonSave"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/save_create"
                android:layout_weight="1"
                app:backgroundTint="?attr/colorPrimary"
                app:cornerRadius="100dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
