<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:theme="@style/AppTheme.AppBarOverlay"
            android:id="@+id/_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/_toolbar"
                android:background="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/toolbar"
                android:background="?attr/colorSurface"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:id="@+id/ToolbarLinear"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/HeaderButton1"
                        android:padding="2dp"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@drawable/icon_menu_round"
                        android:scaleType="fitCenter"/>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:id="@+id/linearSpace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:textColor="?attr/colorOnSurface"
                            android:id="@+id/Header"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:text="@string/app_name"/>
                    </LinearLayout>
                    <LinearLayout
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:id="@+id/linearTBButtons"
                        android:layout_width="28dp"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:id="@+id/HeaderButtonSort"
                            android:padding="4dp"
                            android:layout_width="28dp"
                            android:layout_height="28dp"
                            android:src="@drawable/icon_format_line_spacing_round"
                            android:scaleType="fitCenter"/>
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/hr"
                    android:background="?attr/colorOnSecondaryContainer"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/linear1"
                android:background="?attr/colorSurface"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:id="@+id/linearOnEmpty"
                    android:padding="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1">
                    <ImageView
                        android:id="@+id/imageview1"
                        android:layout_width="100dp"
                        android:layout_height="75dp"
                        android:src="@drawable/icon_art_track_round"
                        android:scaleType="centerCrop"/>
                    <TextView
                        android:textSize="14sp"
                        android:textColor="?attr/colorOnSurfaceVariant"
                        android:gravity="center"
                        android:id="@+id/textview1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/not_created_projects"/>
                    <com.google.android.material.button.MaterialButton
                        android:textSize="12sp"
                        android:textColor="?attr/colorOnPrimary"
                        android:gravity="center"
                        android:id="@+id/buttonSave"
                        android:padding="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="28dp"
                        android:text="@string/refresh"
                        app:backgroundTint="?attr/colorPrimary"
                        app:cornerRadius="100dp"/>
                </LinearLayout>
                <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                    android:id="@+id/swiperefreshlayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <ListView
                        android:id="@+id/listview1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:divider="@null"
                        android:dividerHeight="0dp"
                        android:choiceMode="none"
                        android:layout_weight="1"/>
                </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
            </LinearLayout>
        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_gravity="bottom|right"
            android:id="@+id/_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:srcCompat="@drawable/icon_add_round"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <LinearLayout
        android:layout_gravity="start"
        android:id="@+id/_nav_view"
        android:background="#eeeeee"
        android:layout_width="320dp"
        android:layout_height="match_parent">
        <include
            android:id="@+id/drawer"
            layout="@layout/_drawer_main"/>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
